Fixed various bugs, QOL improvements. System ready to deploy.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -259,4 +259,5 @@
         <item>that</item>
         <item>yourself</item>
     </string-array>
+    <string name="change_UID"><font color='#0000FF'>(change)</font></string>
 </resources>
