"Call" sign description shortened

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,7 +138,7 @@
     </string-array>
     <string-array name="routines">
         <item>bath</item>
-        <item>call (on the phone)</item>
+        <item>call (phone)</item>
         <item>go potty</item>
         <item>nap</item>
         <item>snack</item>
