Replaced "plane" (duplicate of "airplane")

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -304,6 +304,7 @@
         <item>chicken</item>
         <item>child</item>
         <item>chin</item>
+        <item>clean</item>
         <item>close</item>
         <item>closet</item>
         <item>cloud</item>
@@ -431,7 +432,6 @@
         <item>pickle</item>
         <item>pig</item>
         <item>pizza</item>
-        <item>plane</item>
         <item>please</item>
         <item>police</item>
         <item>pool</item>
