--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -392,7 +392,6 @@
         <item>kitty</item>
         <item>lamp</item>
         <item>later</item>
-        <item>light</item>
         <item>like</item>
         <item>lion</item>
         <item>lips</item>
@@ -465,6 +464,7 @@
         <item>stairs</item>
         <item>stay</item>
         <item>sticky</item>
+        <item>store</item>
         <item>story</item>
         <item>stuck</item>
         <item>sun</item>
